diesel-builders/tests/ui/same_as_empty_error.stderr
error: Expected `#[same_as(ancestor::column)]` with parentheses
  --> tests/ui/same_as_empty_error.rs:15:5
   |
15 |     #[same_as]
   |     ^^^^^^^^^^

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `child_table`
  --> tests/ui/same_as_empty_error.rs:12:23
   |
12 | #[diesel(table_name = child_table)]
   |                       ^^^^^^^^^^^ use of unresolved module or unlinked crate `child_table`
   |
   = help: if you wanted to use a crate named `child_table`, use `cargo add child_table` to add it to your `Cargo.toml`
